# gllim_test_dev

./: CMakeLists.txt  README.md  computeDeterminant.cpp  computeDeterminant.hpp
shared_library/: a.out  main.py
shared_library/my_lib/: CMakeLists.txt  a.out
shared_library/my_lib/source/: computeDeterminant.cpp
shared_library/my_lib/test/: computeDeterminantTest.cpp
source/: computeDeterminant.cpp  computeDeterminant.hpp
test/: computeDeterminantTest.cpp
